--- a/l10n/pom.xml
+++ b/l10n/pom.xml
@@ -7,9 +7,9 @@
     <parent>
         <artifactId>javafx-mvc-parent</artifactId>
         <groupId>com.javafxMvc</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>l10n</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 </project>
